# research-framework

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FUNCTIONAL_SPECIFICATION.md  QUICKSTART.md  README.md  ktb_dl_research.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/specs/: 01_metrics_spec.md  02_task_strategies_spec.md  03_models_spec.md  04_training_spec.md  05_experiment_spec.md  06_comparison_spec.md  07_visualization_spec.md  08_data_spec.md  09_integration_spec.md
examples/: README.md  quickstart.py  test_comparison_system.py  test_metric_system.py  test_task_strategies.py  test_transfer_learning.py  test_visualization.py
experiments/: cifar10_classification_report.ipynb
research/: __init__.py
research/analysis/: __init__.py  comparator.py  metrics.py  model_analyzer.py  performance.py  visualizer.py
research/comparison/: __init__.py  base.py  comparators.py  manager.py
research/config/: __init__.py  base.py  experiment.py  model.py  training.py
research/core/: base_model.py  experiment.py  strategies.py
research/data/: cifar10.py  loaders.py
research/experiment/: __init__.py  recorder.py  result.py  runner.py
research/metrics/: __init__.py  base.py  classification.py  regression.py  tracker.py
research/models/: __init__.py
research/models/pretrained/: __init__.py  registry.py  resnet.py  vgg.py
research/models/simple/: __init__.py  base.py  cnn.py  fully_connected.py
research/strategies/: __init__.py
research/strategies/logging/: __init__.py  simple_strategy.py  wandb_strategy.py
research/strategies/task/: __init__.py  base.py  task_strategies.py
research/strategies/training/: __init__.py  vanilla_strategy.py
research/visualization/: VISUALIZATION_FEATURES.md  __init__.py  visualizer.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cifar10_datamodule.py  test_comparators.py  test_comparison_manager.py  test_config.py  test_data_loaders.py  test_experiment.py  test_experiment_recorder.py  test_metrics.py  test_models.py  test_registry.py  test_task_strategies.py  test_vanilla_strategy.py  test_visualizer.py
